# superbol-studio-oss

./: .autofonce  .drom  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .vscodeignore  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  LICENSE.md  Makefile  Makefile.drom-tpl  Makefile.header  Makefile.vsix-rules  README.md  REMOTE_TEST.md  SUPPORT.md  build.js  default.nix  drom.toml  dune  dune-project  dune-project.drom-tpl  flake.nix  index.html  package-lock.json  package.json  shell.nix  superbol-vscode-extension-deps.opam.locked  tsconfig.json
assets/: cfg-arc-renderer.html  cfg-arc.css  cfg-arc.js  cfg-d3-renderer.html  cfg-dot-renderer.html  cfg-dot.css  cfg-dot.js
doc/: index.html
docs/: index.html  index.html.drom-tpl
emacs/: DEBUG.md  README.md  cobol-mode.el  cobol-superbol-indent.el  cobol-superbol-mode.el  eglot-superbol.el  lsp-superbol.el  superbol-mode.el
nix/: default.nix  ez_api.nix  ez_cmdliner.nix  ez_file.nix  ez_subst.nix  json-data-encoding.nix  lsp.nix  menhir.nix  menhirLib.nix  menhirSdk.nix  ocplib_stuff.nix  ppx_deriving_encoding.nix  sources.json  yojson.nix
opam/: autofonce.opam  autofonce_config.opam  autofonce_core.opam  autofonce_lib.opam  autofonce_m4.opam  autofonce_misc.opam  autofonce_patch.opam  autofonce_share.opam  cobol_ast.opam  cobol_cfg.opam  cobol_common.opam  cobol_config.opam  cobol_data.opam  cobol_data_old.opam  cobol_data_types.opam  cobol_indent.opam  cobol_indent_old.opam  cobol_lsp.opam  cobol_parser.opam  cobol_preproc.opam  cobol_ptree.opam  cobol_typeck.opam  cobol_typeck_old.opam  cobol_unit.opam  ebcdic_lib.opam  ez-cob.opam  ez_call.opam  ez_toml.opam  ez_win32.opam  ezlibcob.opam  ezlibcob_test.opam  ezr_toml.opam  gnucobol_config.opam  h2mlstubs.opam  interop-js-stubs.opam  interop.opam  libcob-ctypes.opam  node-js-stubs.opam  package-json.opam  polka-js-stubs.opam  (+27 more)
scripts/: before-sphinx.sh  (+5 more)
src/tramabol/: dune
src/tramabol/cobaux/: Makefile  cobaux.h  cobaux_field.c  cobaux_module.c  cobaux_termio.c  cobaux_typing_helper.h
src/tramabol/ez-cob/: README.md  dune  ezCob.ml  ezCob.mli  field.ml  index.mld  module.ml  numeric.ml  package.toml  printer.ml  termio.ml  types.ml  utils.ml
src/tramabol/ezlibcob/: dune  generate.ml  genstubs.ml  index.mld  libcob_stubs_header.c  libcob_stubs_trailer.c  package.toml  parser.ml  stubs.h  v1_header.ml  v1_trailer.ml
src/tramabol/libcob-ctypes/: README.md  dune  index.mld  libcob_ctypes.ml  libcob_field.ml  libcob_module.ml  libcob_numeric.ml  libcob_termio.ml  libcob_types.ml  package.toml
src/tramabol/libcob-idl/: cobaux_caml.c  cobaux_caml.h  dune  field.idl  index.mld  libcob_idl.ml  module.idl  package.toml  termio.idl
src/tramabol/tramabol/: dune  linking_flags.sh  linking_flags.sh.drom-tpl  main.ml  package.toml
src/tramabol/tramabol_lib/: data.ml  dune  main.ml  module.ml  module.mli  package.toml  types.ml
test/cobol_data/: dune  test_memory.ml  test_qualified_map.ml
test/cobol_parsing/: cS_tokens.ml  compiler_directives.ml  decimal_point.ml  dune  exec_blocks.ml  parser_testing.ml  test_appending.ml  test_appending_large.ml  test_combined_relations_parsing.ml  test_cutnpaste_large.ml  test_intrinsics_registration.ml  test_picture_parsing.ml  test_stuttering.ml  test_targeted_insertions.ml  testing_helpers.ml  tokens.ml
test/cobol_preprocessing/: alphanums_with_utf8.ml  auto_sourceformat.ml  auto_sourceformat_rewind.ml  compiler_directives.ml  dune  preproc_testing.ml  source_lines.ml  tabs.ml
test/cobol_typeck/: dune  ko_77.ml  ko_basic.ml  ko_conditions.ml  ko_pic.ml  ko_proc_names.ml  ko_redefines.ml  ko_renames.ml  ko_syntax.ml  ko_usage.ml  ok_77.ml  ok_basic.ml  ok_conditions.ml  ok_occurs.ml  ok_pic.ml  ok_redefines.ml  ok_renames.ml  ok_usage.ml  prog_printer.ml  typeck_testing.ml
test/libcob-ctypes/: dune  test.expected  test.input  test.ml
test/libcob-idl/: dune  test.expected  test.ml
test/output-tests/: README.md  configuration.expected  data_binary.expected  data_display.expected  data_packed.expected  data_pointer.expected  dune  gnucobol-tests-gen.ml  gnucobol-tests.inc  gnucobol.expected  gnucobol.ml  listings.expected  preproc.expected  preproc.ml  reparse.expected  reparse.ml  run_accept.expected  run_extensions.expected  run_file.expected  run_functions.expected  run_fundamental.expected  run_initialize.expected  run_misc.expected  run_ml.expected  run_refmod.expected  run_reportwriter.expected  run_returncode.expected  run_subscripts.expected  syn_copy.expected  syn_definition.expected  syn_file.expected  syn_functions.expected  syn_literals.expected  syn_misc.expected  syn_move.expected  syn_occurs.expected  syn_redefines.expected  syn_refmod.expected  syn_reportwriter.expected  syn_screen.expected  (+4 more)
test/testing_utils/: dune  prog_common.ml  prog_parser.ml  prog_preproc.ml  prog_printer.ml  prog_typeck.ml  testing_helpers.ml
vendors/ANSITerminal/: .gitignore  ANSITerminal.opam  CHANGES.md  Makefile  README.md  build.cmd  dune-project
vendors/ANSITerminal/src/: ANSITerminal.mli  ANSITerminal_common.ml  ANSITerminal_unix.ml  ANSITerminal_unix_stubs.c  ANSITerminal_win.ml  ANSITerminal_win.mli  ANSITerminal_win_stubs.c  choose_implementation.ml  dune
vendors/ANSITerminal/tests/: dune  showcolors.ml  test.ml
vendors/goblint-cil/src/: check.ml  cil.ml  cil.mli  dune  expcompare.ml  feature.ml  feature.mli  formatcil.ml  formatparse.mly  machdep-ml.c  machdep.cppo.ml  machdepArchConfigure.ml  machdepConfigure.ml  machdepenv.ml  main.ml  mainFeature.ml  mainFeature.mli  mergecil.ml  modelConfigure.ml
vendors/goblint-cil/src/ext/dataslicing/: dataslicing.ml
vendors/goblint-cil/src/ext/liveness/: usedef.ml
vendors/goblint-cil/src/ext/pta/: ptranal.ml
vendors/goblint-cil/src/ext/syntacticsearch/: funcFunction.ml  funcVar.ml  queryMapping.ml
vendors/goblint-cil/src/ext/zrapp/: dune  rmciltmps.ml  zrapp.ml
vendors/goblint-cil/src/frontc/: cabs.ml  cabs2cil.ml  cabs2cil.mli  cabshelper.ml  cabsvisit.ml  clexer.mll  cparser.mly  cprint.ml  patch.ml
vendors/goblint-cil/src/ocamlutil/: pretty.ml  pretty.mli
(+2959 files in other folders)
