(env
  (dev
    (flags (:standard -w -32-67-69))
  )
  (universal
    (flags (:standard -w -32-67-69))
  )

)
(dirs share src test vendors )

; Ignore ANSITerminal, that we vendor ourself in vendors/ANSITerminal:
(subdir vendors
  (subdir autofonce
    (subdir vendors
      (dirs :standard \ ANSITerminal))))
