(tests
  (names test_picture_parsing test_combined_relations_parsing)
  (modules test_picture_parsing test_combined_relations_parsing)
  (libraries alcotest cobol_parser cobol_data testing_helpers))

(library
 (name testing_helpers)
 (modules Testing_helpers)
 (libraries cobol_common cobol_ptree)
 )

(library
 (name parser_testing)
 (modules Parser_testing)
 (libraries cobol_parser testing_helpers)
 )

(library
 (name test_cobol_parser)
 (modules cS_tokens decimal_point tokens)
 (preprocess
  (pps ppx_expect))
 (inline_tests
  (modes best)) ; add js for testing with nodejs
 (libraries parser_testing)
 )

(library
 (name test_cobol_parser_rewind)
 (modules test_appending test_appending_large test_stuttering test_cutnpaste_large)
 (preprocess
  (pps ppx_expect))
 (inline_tests
  (modes best)) ; add js for testing with nodejs
 (libraries parser_testing testsuite_utils)
 )
