(library
 (name preproc_testing)
 (modules Preproc_testing)
 (libraries cobol_preproc testing_utils)
 )

(library
 (name test_cobol_preproc)
 (modules source_lines
          compiler_directives
          alphanums_with_utf8
          auto_sourceformat
          auto_sourceformat_rewind)
 (preprocess
   (pps ppx_expect))
 (inline_tests
   (modes best)) ; add js for testing with nodejs
 (libraries preproc_testing)
 )
