; if you modify this file, add 'test' to the 'skip' field in drom.toml

(executable
 (name test)
 (modules Test)
 (libraries ez-cob ctypes))

(rule
 (action (with-stdin-from test.input
         (with-stdout-to test.output
         (run %{exe:test.exe})))))

(rule
 (alias runtest)
 (enabled_if %{env:TEST_LIBCOB_CTYPES=false})       ; <- /!\ disabled by default
 (action
  (diff test.expected test.output)))
