; if you modify this file, add 'test' to the 'skip' field in drom.toml

(executable
 (name test)
 (modules Test)
 (libraries libcob-idl ctypes))

(alias
 (name buildtest)
 (deps test.exe))

(rule
 (action (with-stdin-from test.input
         (with-stdout-to test.output
         (run %{exe:test.exe})))))

(rule
 (alias runtest)
 (action
  (diff test.expected test.output)))
