; if you modify this file, add 'test' to the 'skip' field in drom.toml

; a first example where we would test the behavior of one of the executables
; that we generate else-where

; (rule
;  (deps test1.expected)
;  (action
;   (with-stdout-to
;    test1.output
;    (run cat test1.expected))))

; (rule
;  (alias runtest)
;  (action
;   (diff test1.expected test1.output)))

; a second example where we generate a file and test its output

(executable
 (name preproc)
 (modules Preproc)
 (libraries cobol_preproc) ; add your own library here
 )

(executable
 (name gnucobol)
 (modules Gnucobol)
 (libraries autofonce_lib superbol_testutils cobol_parser) ; add your own library here
 )

(alias
 (name buildtest)
 (deps preproc.exe gnucobol.exe))

(rule
 (with-stdout-to
  preproc.output
  ; (setenv COB_CONFIG_DIR "%{env:PWD=.}/%{project_root}/import/gnucobol/config"
  (setenv COB_CONFIG_DIR "%{env:DUNE_SOURCEROOT=.}/import/gnucobol/config"
   (run %{exe:preproc.exe}))))

(rule
 (alias runtest)
 (action
  (diff preproc.expected preproc.output)))

(rule
 (with-stdout-to
  gnucobol.output
  (setenv COB_CONFIG_DIR "%{env:DUNE_SOURCEROOT=.}/import/gnucobol/config"
   (run %{exe:gnucobol.exe}))))

(rule
 (alias runtest)
 (action
   (diff gnucobol.expected gnucobol.output)))
