; if you modify this file, add 'test' to the 'skip' field in drom.toml

(executable
 (name preproc)
 (modules Preproc)
 (libraries cobol_preproc testsuite_utils)
 )

(executable
 (name gnucobol)
 (modules Gnucobol)
 (libraries autofonce_lib superbol_testutils superbol_preprocs cobol_parser)
 )

(executable
 (name reparse)
 (modules Reparse)
 (libraries cobol_parser testsuite_utils)
 )

(alias
 (name buildtest)
 (deps preproc.exe gnucobol.exe))

(rule
 (deps (source_tree ../testsuite))
 (action
  (with-stdout-to
   preproc.output
   ; (setenv COB_CONFIG_DIR "%{env:PWD=.}/%{project_root}/import/gnucobol/config"
   (setenv COB_CONFIG_DIR "%{env:DUNE_SOURCEROOT=.}/import/gnucobol/config"
    (run %{exe:preproc.exe})))))

(rule
 (alias runtest)
 (action
  (diff preproc.expected preproc.output)))

(rule
 (deps (source_tree ../testsuite))
 (action
  (with-stdout-to
   reparse.output
   ; (setenv COB_CONFIG_DIR "%{env:PWD=.}/%{project_root}/import/gnucobol/config"
   (setenv COB_CONFIG_DIR "%{env:DUNE_SOURCEROOT=.}/import/gnucobol/config"
    (run %{exe:reparse.exe})))))

(rule
 (alias runtest)
 (action
  (diff reparse.expected reparse.output)))

(include gnucobol-tests.inc)
